# ipo_risk_score

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/paper/: ipo_risk_score.tex
domain/risk/: __init__.py  engine.py  entities.py  features.py  logistic.py  validators.py
domain/risk/features/: __init__.py  builder.py  context.py  financials.py  liquidity.py  quality.py  valuation.py
examples/: score_upx.py
ipo_risk_score/: __init__.py
ipo_risk_score/domain/risk/: __init__.py  calibration.py  entities.py  validators.py
ipo_risk_score/domain/risk/features/: __init__.py  quality.py  textual.py
tests/features/: test_builder.py  test_context.py  test_financial.py  test_liquidity.py  test_liquidity_extreme.py  test_logistic_security.py  test_quality.py  test_textual.py  test_validation.py  test_valuation.py
